decode subpath throws exception